force-app/main/default/objects/FEC_CustomerDataConfigHistory__c/FEC_CustomerDataConfigHistory__c.object-meta.xml
<CustomObject>
    <label>Customer Data Config History</label>
    <nameField>
        <label>FEC_CustomerDataConfigHistoryName</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers Data Config History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>