force-app/main/default/objects/FEC_CustomerDataConfigHistory__c/fields/FEC_Customers_Data_Config__c.field-meta.xml
<CustomField>
    <fullName>FEC_Customers_Data_Config__c</fullName>
    <label>Customer Additional Info Config</label>
    <referenceTo>FEC_CustomerAdditionalInfoConfig__c</referenceTo>
    <relationshipLabel>Customers Data Config History</relationshipLabel>
    <relationshipName>Customers_Data_Config_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>