force-app/main/default/objects/FEC_CustomerDataConfigHistory__c/fields/FEC_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>